{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 112,
  "lineage": "f14131bf-1b93-bcf9-250c-48ff06defcd7",
  "resources": [
    {
      "module": "module.aurora",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aurora",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672626785844:security-group/sg-054acb602f10c72e2",
            "description": "Security group for Aurora PostgreSQL cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-054acb602f10c72e2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from allowed security groups",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "daysi-prod-aurora-20260309202437772000000002",
            "name_prefix": "daysi-prod-aurora-",
            "owner_id": "672626785844",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "aurora",
              "Name": "daysi-prod-aurora-sg",
              "Project": "daysi"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "aurora",
              "Name": "daysi-prod-aurora-sg",
              "Project": "daysi"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7522b66f994223a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:672626785844:loadbalancer/app/daysi-prod-alb/e038151ad9cf2237",
            "arn_suffix": "app/daysi-prod-alb/e038151ad9cf2237",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "daysi-prod-alb-1965252367.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:672626785844:loadbalancer/app/daysi-prod-alb/e038151ad9cf2237",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "daysi-prod-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09294d4d0d18e635a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0bae9d5f6734ac9e0"
              },
              {
                "subnet_id": "subnet-0e94f971d57b8e42b"
              },
              {
                "subnet_id": "subnet-0f467711312e8de78"
              }
            ],
            "subnets": [
              "subnet-0bae9d5f6734ac9e0",
              "subnet-0e94f971d57b8e42b",
              "subnet-0f467711312e8de78"
            ],
            "tags": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "ecs",
              "Name": "daysi-prod-alb",
              "Project": "daysi"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "ecs",
              "Name": "daysi-prod-alb",
              "Project": "daysi"
            },
            "vpc_id": "vpc-0b7522b66f994223a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:672626785844:listener/app/daysi-prod-alb/e038151ad9cf2237/19c9475a4eb64116",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:672626785844:targetgroup/daysi-prod-tg/cd1a6738226ff0d2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:672626785844:listener/app/daysi-prod-alb/e038151ad9cf2237/19c9475a4eb64116",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:672626785844:loadbalancer/app/daysi-prod-alb/e038151ad9cf2237",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "daysi"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_lb.main",
            "module.ecs.aws_lb_target_group.main",
            "module.ecs.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:672626785844:targetgroup/daysi-prod-tg/cd1a6738226ff0d2",
            "arn_suffix": "targetgroup/daysi-prod-tg/cd1a6738226ff0d2",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/v1/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:672626785844:targetgroup/daysi-prod-tg/cd1a6738226ff0d2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:672626785844:loadbalancer/app/daysi-prod-alb/e038151ad9cf2237"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "daysi-prod-tg",
            "port": 4010,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "ecs",
              "Name": "daysi-prod-tg",
              "Project": "daysi"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "ecs",
              "Name": "daysi-prod-tg",
              "Project": "daysi"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b7522b66f994223a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672626785844:security-group/sg-09294d4d0d18e635a",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09294d4d0d18e635a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "daysi-prod-alb-20260309204109286800000001",
            "name_prefix": "daysi-prod-alb-",
            "owner_id": "672626785844",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "ecs",
              "Name": "daysi-prod-alb-sg",
              "Project": "daysi"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "ecs",
              "Name": "daysi-prod-alb-sg",
              "Project": "daysi"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7522b66f994223a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672626785844:security-group/sg-007a084891e552466",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-007a084891e552466",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Container port from ALB",
                "from_port": 4010,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09294d4d0d18e635a"
                ],
                "self": false,
                "to_port": 4010
              }
            ],
            "name": "daysi-prod-ecs-20260309204114289300000003",
            "name_prefix": "daysi-prod-ecs-",
            "owner_id": "672626785844",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "ecs",
              "Name": "daysi-prod-ecs-sg",
              "Project": "daysi"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "ecs",
              "Name": "daysi-prod-ecs-sg",
              "Project": "daysi"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7522b66f994223a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_security_group.alb",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02ad4d9f7fbd5f6b8",
            "arn": "arn:aws:ec2:us-east-1:672626785844:elastic-ip/eipalloc-02ad4d9f7fbd5f6b8",
            "association_id": "eipassoc-0b6b80070ec733296",
            "domain": "vpc",
            "id": "eipalloc-02ad4d9f7fbd5f6b8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02c38e3b7e32ba3d7",
            "private_dns": "ip-10-1-0-162.ec2.internal",
            "private_ip": "10.1.0.162",
            "public_dns": "ec2-52-55-164-168.compute-1.amazonaws.com",
            "public_ip": "52.55.164.168",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-prod-nat-eip-1",
              "Project": "daysi"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-prod-nat-eip-1",
              "Project": "daysi"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0daca560e9ed5d86c",
            "arn": "arn:aws:ec2:us-east-1:672626785844:elastic-ip/eipalloc-0daca560e9ed5d86c",
            "association_id": "eipassoc-0aa800429388d6abb",
            "domain": "vpc",
            "id": "eipalloc-0daca560e9ed5d86c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-086f23835a2ad920e",
            "private_dns": "ip-10-1-1-28.ec2.internal",
            "private_ip": "10.1.1.28",
            "public_dns": "ec2-35-174-196-133.compute-1.amazonaws.com",
            "public_ip": "35.174.196.133",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-prod-nat-eip-2",
              "Project": "daysi"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-prod-nat-eip-2",
              "Project": "daysi"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e62c07b1e628327b",
            "arn": "arn:aws:ec2:us-east-1:672626785844:elastic-ip/eipalloc-0e62c07b1e628327b",
            "association_id": "eipassoc-006753260cf5a0b4f",
            "domain": "vpc",
            "id": "eipalloc-0e62c07b1e628327b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f7dda2bc9b61d19f",
            "private_dns": "ip-10-1-2-219.ec2.internal",
            "private_ip": "10.1.2.219",
            "public_dns": "ec2-52-55-172-85.compute-1.amazonaws.com",
            "public_ip": "52.55.172.85",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-prod-nat-eip-3",
              "Project": "daysi"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-prod-nat-eip-3",
              "Project": "daysi"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672626785844:internet-gateway/igw-04234d2061ea5ccb4",
            "id": "igw-04234d2061ea5ccb4",
            "owner_id": "672626785844",
            "tags": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-prod-igw",
              "Project": "daysi"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-prod-igw",
              "Project": "daysi"
            },
            "vpc_id": "vpc-0b7522b66f994223a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02ad4d9f7fbd5f6b8",
            "association_id": "eipassoc-0b6b80070ec733296",
            "connectivity_type": "public",
            "id": "nat-0e3ed00dde53d6b6a",
            "network_interface_id": "eni-02c38e3b7e32ba3d7",
            "private_ip": "10.1.0.162",
            "public_ip": "52.55.164.168",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bae9d5f6734ac9e0",
            "tags": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-prod-nat-1",
              "Project": "daysi"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-prod-nat-1",
              "Project": "daysi"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0daca560e9ed5d86c",
            "association_id": "eipassoc-0aa800429388d6abb",
            "connectivity_type": "public",
            "id": "nat-06cba6d0dd4a889f3",
            "network_interface_id": "eni-086f23835a2ad920e",
            "private_ip": "10.1.1.28",
            "public_ip": "35.174.196.133",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f467711312e8de78",
            "tags": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-prod-nat-2",
              "Project": "daysi"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-prod-nat-2",
              "Project": "daysi"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e62c07b1e628327b",
            "association_id": "eipassoc-006753260cf5a0b4f",
            "connectivity_type": "public",
            "id": "nat-0454913328880dc44",
            "network_interface_id": "eni-0f7dda2bc9b61d19f",
            "private_ip": "10.1.2.219",
            "public_ip": "52.55.172.85",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e94f971d57b8e42b",
            "tags": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-prod-nat-3",
              "Project": "daysi"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-prod-nat-3",
              "Project": "daysi"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cb9d5ffa7e25f71f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e3ed00dde53d6b6a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cb9d5ffa7e25f71f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03d7eacf80d3b413e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06cba6d0dd4a889f3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03d7eacf80d3b413e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04309f85de14f5d7a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0454913328880dc44",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04309f85de14f5d7a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04234d2061ea5ccb4",
            "id": "r-rtb-0900aafe0a4fc77f51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0900aafe0a4fc77f5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672626785844:route-table/rtb-0cb9d5ffa7e25f71f",
            "id": "rtb-0cb9d5ffa7e25f71f",
            "owner_id": "672626785844",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e3ed00dde53d6b6a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-prod-private-rt-1",
              "Project": "daysi"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-prod-private-rt-1",
              "Project": "daysi"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7522b66f994223a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672626785844:route-table/rtb-03d7eacf80d3b413e",
            "id": "rtb-03d7eacf80d3b413e",
            "owner_id": "672626785844",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06cba6d0dd4a889f3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-prod-private-rt-2",
              "Project": "daysi"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-prod-private-rt-2",
              "Project": "daysi"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7522b66f994223a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672626785844:route-table/rtb-04309f85de14f5d7a",
            "id": "rtb-04309f85de14f5d7a",
            "owner_id": "672626785844",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0454913328880dc44",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-prod-private-rt-3",
              "Project": "daysi"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-prod-private-rt-3",
              "Project": "daysi"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7522b66f994223a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672626785844:route-table/rtb-0900aafe0a4fc77f5",
            "id": "rtb-0900aafe0a4fc77f5",
            "owner_id": "672626785844",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04234d2061ea5ccb4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-prod-public-rt",
              "Project": "daysi"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-prod-public-rt",
              "Project": "daysi"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7522b66f994223a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042897da158c46e3c",
            "route_table_id": "rtb-0cb9d5ffa7e25f71f",
            "subnet_id": "subnet-05faf7c9d1b8150d8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e591d8d7d16e06a0",
            "route_table_id": "rtb-03d7eacf80d3b413e",
            "subnet_id": "subnet-069cb20eaa1177fe6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aab6636cc479c975",
            "route_table_id": "rtb-04309f85de14f5d7a",
            "subnet_id": "subnet-0a348443233fa1cb6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083d5373071244edb",
            "route_table_id": "rtb-0900aafe0a4fc77f5",
            "subnet_id": "subnet-0bae9d5f6734ac9e0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb92978c2392a200",
            "route_table_id": "rtb-0900aafe0a4fc77f5",
            "subnet_id": "subnet-0f467711312e8de78"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0092ef78103a766f1",
            "route_table_id": "rtb-0900aafe0a4fc77f5",
            "subnet_id": "subnet-0e94f971d57b8e42b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672626785844:subnet/subnet-05faf7c9d1b8150d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05faf7c9d1b8150d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "672626785844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-prod-private-us-east-1a",
              "Project": "daysi",
              "Type": "private"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-prod-private-us-east-1a",
              "Project": "daysi",
              "Type": "private"
            },
            "vpc_id": "vpc-0b7522b66f994223a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672626785844:subnet/subnet-069cb20eaa1177fe6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069cb20eaa1177fe6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "672626785844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-prod-private-us-east-1b",
              "Project": "daysi",
              "Type": "private"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-prod-private-us-east-1b",
              "Project": "daysi",
              "Type": "private"
            },
            "vpc_id": "vpc-0b7522b66f994223a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672626785844:subnet/subnet-0a348443233fa1cb6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a348443233fa1cb6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "672626785844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-prod-private-us-east-1c",
              "Project": "daysi",
              "Type": "private"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-prod-private-us-east-1c",
              "Project": "daysi",
              "Type": "private"
            },
            "vpc_id": "vpc-0b7522b66f994223a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672626785844:subnet/subnet-0bae9d5f6734ac9e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bae9d5f6734ac9e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "672626785844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-prod-public-us-east-1a",
              "Project": "daysi",
              "Type": "public"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-prod-public-us-east-1a",
              "Project": "daysi",
              "Type": "public"
            },
            "vpc_id": "vpc-0b7522b66f994223a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672626785844:subnet/subnet-0f467711312e8de78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f467711312e8de78",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "672626785844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-prod-public-us-east-1b",
              "Project": "daysi",
              "Type": "public"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-prod-public-us-east-1b",
              "Project": "daysi",
              "Type": "public"
            },
            "vpc_id": "vpc-0b7522b66f994223a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672626785844:subnet/subnet-0e94f971d57b8e42b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e94f971d57b8e42b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "672626785844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-prod-public-us-east-1c",
              "Project": "daysi",
              "Type": "public"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-prod-public-us-east-1c",
              "Project": "daysi",
              "Type": "public"
            },
            "vpc_id": "vpc-0b7522b66f994223a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672626785844:vpc/vpc-0b7522b66f994223a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0d9ca1e8d4e011fdf",
            "default_route_table_id": "rtb-00c54c493dc820cd3",
            "default_security_group_id": "sg-0e400cba7c5525469",
            "dhcp_options_id": "dopt-02d66f5192ce963d3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b7522b66f994223a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00c54c493dc820cd3",
            "owner_id": "672626785844",
            "tags": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-prod-vpc",
              "Project": "daysi"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-prod-vpc",
              "Project": "daysi"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}